--- a/index.html
+++ b/index.html
@@ -1,68 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Wedding Photo Upload</title>
   <style>
-    body { font-family: sans-serif; text-align: center; padding: 20px; }
-    #gallery img { width: 150px; margin: 10px; border-radius: 10px; }
+    body { font-family: sans-serif; padding: 2rem; text-align: center; }
+    input, button { padding: 0.5rem; font-size: 1rem; margin: 1rem; }
+    .gallery img { max-width: 150px; margin: 10px; border-radius: 10px; box-shadow: 2px 2px 8px #ccc; }
   </style>
 </head>
 <body>
-  <h1>📸 Share Your Wedding Photos</h1>
-
-  <form id="uploadForm">
-    <input type="file" id="fileInput" accept="image/*" required />
-    <br><br>
-    <button type="submit">Upload</button>
-  </form>
-
+  <h1>📸 Upload Your Wedding Photos</h1>
+  <input type="file" id="fileInput" accept="image/*">
+  <button onclick="upload()">Upload</button>
   <p id="status"></p>
 
-  <hr/>
-  <h2>📷 Gallery</h2>
-  <div id="gallery"></div>
+  <h2>🖼️ Gallery</h2>
+  <div id="gallery" class="gallery"></div>
 
   <script>
-    const uploadUrl = "https://script.google.com/macros/s/AKfycby79x6-KZLhf4IfMnARPQAdq_0biTVIMfczWahWPP-n7tLMqzwA5gyakiNVoPzhdags/exec";
+    const scriptURL = "https://script.google.com/macros/s/AKfycbzkaVTV-92_d5CYk1VVk_1nR34J7u6CL6GD5qsC1tzlM6TXV-fhwT6Gr3Yn4Vw4jnP0/exec";
+    const folderId = "1Zko3g5J8RbKXYT5sOs5szvZuQZovGlZS";
+    const apiKey = "AIzaSyCBoV8Nc-DLxKfREtF_Na-NHt_T4676PfI";
 
-    document.getElementById("uploadForm").addEventListener("submit", async function (e) {
-      e.preventDefault();
-      const fileInput = document.getElementById("fileInput");
-      const file = fileInput.files[0];
-      if (!file) return;
+    async function upload() {
+      const file = document.getElementById('fileInput').files[0];
+      if (!file) return alert("Please select a photo.");
+      document.getElementById("status").textContent = "Uploading...";
 
-      const reader = new FileReader();
-      reader.onload = function () {
-        fetch(uploadUrl, {
-          method: "POST",
-          headers: { "Content-Type": "application/x-www-form-urlencoded" },
-          body: new URLSearchParams({
-            file: reader.result,
-            filename: file.name,
-            mimeType: file.type
-          })
-        })
-        .then(res => res.text())
-        .then(text => document.getElementById("status").innerText = "Uploaded!")
-        .catch(err => console.error(err));
-      };
-      reader.readAsDataURL(file);
-    });
+      const formData = new FormData();
+      formData.append("image", file);
 
-    // Load images from Google Drive public folder
-    const folderId = "Wedding";
-    fetch(`https://www.googleapis.com/drive/v3/files?q='${folderId}'+in+parents+and+mimeType contains 'image/'&key=AIzaSyCBoV8Nc-DLxKfREtF_Na-NHt_T4676PfI`)
-      .then(res => res.json())
-      .then(data => {
-        const gallery = document.getElementById("gallery");
+      try {
+        const res = await fetch(scriptURL, { method: "POST", body: formData });
+        const fileId = await res.text();
+        document.getElementById("status").textContent = "Uploaded!";
+        loadGallery();
+      } catch (err) {
+        console.error(err);
+        document.getElementById("status").textContent = "Upload failed.";
+      }
+    }
+
+    async function loadGallery() {
+      const gallery = document.getElementById("gallery");
+      gallery.innerHTML = "Loading...";
+
+      try {
+        const res = await fetch(
+          `https://www.googleapis.com/drive/v3/files?q='${folderId}'+in+parents+and+mimeType+contains+'image/'&key=${apiKey}&fields=files(id,name)`
+        );
+        const data = await res.json();
+
+        if (!data.files || data.files.length === 0) {
+          gallery.innerHTML = "<p>No images uploaded yet.</p>";
+          return;
+        }
+
+        gallery.innerHTML = "";
         data.files.forEach(file => {
           const img = document.createElement("img");
-          img.src = `https://drive.google.com/uc?id=${file.id}`;
+          img.src = `https://drive.google.com/uc?export=view&id=${file.id}`;
+          img.alt = file.name;
           gallery.appendChild(img);
         });
-      });
+      } catch (err) {
+        console.error("Gallery error:", err);
+        gallery.innerHTML = "<p>Failed to load gallery.</p>";
+      }
+    }
+
+    // Load on page load
+    loadGallery();
   </script>
 </body>
 </html>
