--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <button onclick="upload()">Качи</button>
   <p id="status"></p>
 
-  <h2>Галерия</h2>
+  <h2>Галерия 2</h2>
   <div id="gallery"></div>
 
   <script>
