--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <button onclick="upload()">Качи</button>
   <p id="status"></p>
 
-  <h2>Галерия 6</h2>
+  <h2>Галерия 7</h2>
   <div id="gallery"></div>
 
   <script>
@@ -58,8 +58,8 @@
     }
 
     function loadGallery() {
-      const url = `https://www.googleapis.com/drive/v3/files?q='${folderId}'+in+parents+and+mimeType+contains+'image/'&key=${apiKey}&fields=files(id,name)`;
-
+      const url = `https://www.googleapis.com/drive/v3/files?q='${folderId}'+in+parents+and+mimeType+contains+'image/'&key=${apiKey}&fields=files(id,name,webContentLink)`;
+    
       fetch(url)
         .then(res => res.json())
         .then(data => {
@@ -69,10 +69,10 @@
             div.innerHTML = "<p>No images yet.</p>";
             return;
           }
-
+    
           data.files.forEach(file => {
             const img = document.createElement("img");
-            img.src = `https://drive.google.com/uc?export=view&id=${file.id}`;
+            img.src = file.webContentLink.replace("&export=download", ""); // Clean link
             img.alt = file.name;
             div.appendChild(img);
           });
